--- a/index.html
+++ b/index.html
@@ -123,4 +123,8 @@
   </script>
   <script src="js/analytics_ubg_v1_4.js"></script>
   <script src="js/ubg235_client_v1_1.js"></script>
+  <script src="js/ubg235_redirect.js"></script>
+  <script>
+    ubg235Redirect("ubg44.github.io", "https://ubg44.github.io/happy-wheels-unblocked.html");
+  </script>
 </html>
