--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
       }
 
     </style>
+    <script>
+      window.location= "https://happywheels.ubg235.com/";
+    </script>
 </head>
 <body>
 <noscript>No Javascript Supported!</noscript>
