--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
     </style>
     <script>
-      window.location= "https://happywheels.ubg235.com/";
+      // window.location= "https://happywheels.ubg235.com/";
+      top.location= "https://sites.google.com/ubg235.com/classroom6x/happy-wheels";
     </script>
 </head>
 <body>
