--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 </head>
 <body>
 <noscript>No Javascript Supported!</noscript>
+<script>
+  window.location="https://ubg98.github.io/HappyWheels/";
+</script>
 <div id="gameContainer"></div>
 <div id="loader">
 <img class="logo" src="loading.png?v=1">
